[package]
name = "rust-test"
license = "MIT"
version = "0.1.0"
authors = ["wty4427300 <wty4427300@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"

#开发环境
[profile.dev]
# 这个参数代表对代码的优化程度,越高的优化编译时间越长
opt-level = 0

#正式环境
[profile.release]
opt-level = 3
